--- a/app/src/main/res/layout/fragment_list_news.xml
+++ b/app/src/main/res/layout/fragment_list_news.xml
@@ -1,7 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/fragment_news_list"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@color/purple_200"
+    >
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:background="@color/teal_200"
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:overScrollMode="always"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
