--- a/app/src/main/res/layout/item_article_preview.xml
+++ b/app/src/main/res/layout/item_article_preview.xml
@@ -5,15 +5,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:layout_height="wrap_content"
+    android:background="@drawable/shape_round_corner"
     android:padding="4dp">
 
     <ImageView
         android:id="@+id/article_preview_image"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/article_preview_source"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/article_preview_description"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
         android:background="@drawable/shape_round_corner"
         tools:src="@android:mipmap/sym_def_app_icon"
         android:contentDescription="null">
@@ -24,7 +25,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/article_preview_source"
         android:text="The Washington Post"
-        app:layout_constraintStart_toEndOf="@id/article_preview_image"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
     </TextView>
 
@@ -39,15 +40,14 @@
     </TextView>
 
     <TextView
-        android:padding="8dp"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
         android:id="@+id/article_preview_description"
-        app:layout_constraintTop_toBottomOf="@id/article_preview_source"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:padding="8dp"
         android:text="Follow the New York Post’s live updates of Tuesday’s subway shooting attack at Brooklyn’s 36th Street station, which left at least 29 people injured."
-        >
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/article_preview_image"
+        app:layout_constraintTop_toBottomOf="@id/article_preview_source">
 
     </TextView>
 
