--- a/app/src/main/res/layout/fragment_list_news.xml
+++ b/app/src/main/res/layout/fragment_list_news.xml
@@ -4,11 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/purple_200"
+    android:background="@color/back"
     >
 
     <androidx.recyclerview.widget.RecyclerView
-        android:background="@color/teal_200"
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
